[package]
name = "mv3_contract_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program="1.17.1"
spl-token = "4.0.0"
borsh="0.10"
ethnum = "1.5.0"
thiserror = "1.0"
serde_json = "1.0.113"
solana-sdk = "1.17.13"
solana-program-test="1.17.1"
solana-client = "1.17.1"


[dev-dependencies]
keccak-hash = "0.10.0"


[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name="create_config"
path="tests/scripts/create_config.rs"

[[bin]]
name='set_exsig'
path="tests/scripts/set_chainsig.rs"


[features]
no-entrypoint = []
test-sbf = []