[package]
name = "hello_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17.1"
borsh="0.10.0"
spl-token = {version="4.0.0",features=["no-entrypoint"]}

[lib]
crate-type = ["cdylib"]