[package]
name = "message_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program="1.17.1"
spl-discriminator = "0.1.0"
spl-tlv-account-resolution = "0.5.1"
spl-type-length-value = "0.3.0"
spl-pod = "0.1.0"
spl-program-error = "0.3.0"


[lib]
crate-type = ["cdylib"]
