[package]
name = "hello_nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program="1.17.1"
spl-token = {version="4.0.0",features=["no-entrypoint"]}
borsh="0.10"
ethnum = "1.5.0"
thiserror = "1.0"
message_hook = {path = "../../interface"}
spl-tlv-account-resolution = "0.5.1"
spl-type-length-value = "0.3.0"
mv3_contract_solana={path="../mv3_contract_solana",features=["no-entrypoint"]}
mv3_sender_solana={path="../mv3_sender_solana",features=["no-entrypoint"]}
mpl-token-metadata = "4.1.1"
mpl-token-auth-rules = {version="1.5.0",features=["no-entrypoint"]}
[lib]
name="hello_nft"
crate-type=["lib","cdylib"]