[package]
name = "hello_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17.1"
borsh="0.10.0"
spl-token = {version="4.0.0",features=["no-entrypoint"]}
mv3_contract_solana={path="../mv3_contract_solana",features=["no-entrypoint"]}
spl-tlv-account-resolution = "0.5.1"
message_hook={path="../message_hook/interface"}
ethnum = "1.5.0"
[lib]
name="hello_token"
crate-type = ["cdylib","lib"]