[package]
name = "mv3_contract_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program="1.17.1"
spl-token = {version="4.0.0",features=["no-entrypoint"]}
borsh="0.10"
ethnum = "1.5.0"
thiserror = "1.0"
message_hook = {path = "../message_hook/interface"}
spl-tlv-account-resolution = "0.5.1"
spl-type-length-value = "0.3.0"


[lib]
name="mv3_solana_sender"
crate-type = ["cdylib", "lib"]


[features]
no-entrypoint = []
test-sbf = []